[features/twitter-sso][ADD] routes + test and doc search tweets
