# apps/api/src/entities/data/data.controller.ts
@@ -1,6 +1,6 @@
 import { NextFunction, Request, Response } from 'express';
 import SsoTool from '../../tools/sso.tool';
-import { Token } from '../../types.d';
+import { Token, User } from '../../types.d';
 import YoutubeApiWrapper from '../../tools/youtube/api.tool';
 import YoutubeStatsTool from '../../tools/youtube/stats.tool';
 import StatsTool from '../../tools/stats.tool';
@@ -93,6 +93,29 @@ export default class DataController {
                 status: 'success',
                 message: 'Successfully retrieved data',
                 data: { id: data.id, name: data.name, username: data.username },
+            });
+        } catch (e) {
+            next(e);
+        }
+    }
+
+    static async searchTweets(req: Request, res: Response, next: NextFunction) {
+        try {
+            const { user, query } = req;
+
+            if (Object.keys(query).length === 0) throw new ApiError(404, 'Missing Query');
+            const twitterToken: Token = await SsoTool.getProviderToken(user.id, 'Twitter');
+            if (!twitterToken) throw new ApiError(401, 'You must be logged in to access this page');
+            const data = await TwitterApiWrapper.searchTweets(twitterToken.access_token, query);
+            res.status(200).json({
+                status: 'success',
+                message: 'Successfully retrieved data',
+                data: {
+                    data: data.data ? data.data : [],
+                    total: data.meta.result_count,
+                    next: data.meta.next_token ? data.meta.next_token : '',
+                    prev: data.meta.next_token ? data.meta.previous_token : '',
+                },
             });
         } catch (e) {
             next(e);
